templates/web-app.yml
apiVersion: v1
kind: Service
metadata:
  name: $($vars.appName)
  namespace: $($vars.namespace)
spec:
  selector:
    app: $($vars.appName)
  ports:
  - port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: $($vars.appName)
  namespace: $($vars.namespace)
  labels:
    app: $($vars.appName)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $($vars.appName)
  template:
    metadata:
      labels:
        app: $($vars.appName)
    spec:
      containers:
      - name: $($vars.appName)
        image: $($config.ContainerRegistry)/$($vars.imageName):0.0
        ports:
        - containerPort: 80
