templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-$($vars.namespace)
  namespace: $($vars.namespace)
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: example-app
          servicePort: 80
        path: /
